Updated pathspec and deleted unused files.

--- a/code/Model Architecture/ResNet/Full_Model_BiologicalChannels.ipynb
+++ b/code/Model Architecture/ResNet/Full_Model_BiologicalChannels.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_dir = '../../..//IMC_images' \n",
+    "images_dir = '../../../IMC_images' \n",
     "metadata_dir = '../../../metadata.csv'\n",
     "# --- Load CSV and filter dataset ---\n",
     "csv_file = metadata_dir\n",
@@ -684,11 +684,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "698f6f69-e833-4c43-bbba-177584908ba4",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -710,11 +706,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "7c50b18c-b000-4aa0-af48-1335396888fc",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -740,11 +732,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "10155bb2-7fc3-44de-a822-0bc724ad4a58",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -775,11 +763,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "76533899-5797-49a8-a4b0-ea4db0eb043d",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Save the history of your experiments \n",
@@ -1471,7 +1455,7 @@
    "source": [
     "channel_names_new = [\"Gd160\", \"Eu153\", \"Gd155\", \"Nd142\", \"Nd146\", \"Er166\", \"Er170\", \"Yb171\", \"Yb173\", \"Yb174\"]\n",
     "\n",
-    "panel_dir = '/home/jupyter-luvogt/Final_Project_LR/panel.csv' \n",
+    "panel_dir = '../../../panel.csv' \n",
     "panel_df = pd.read_csv(panel_dir)\n",
     "channel_names = dict(zip(panel_df['clean_target'].to_list(), panel_df['channel'].to_list()))"
    ]
